
2008-02-22  Ingo Renner  <ingo@typo3.org>

	* fixed bug #7587: Accesscheck for Workspaceselector, credits Steffen Kamper
	* fixed bug #7588: Accesscheck for clearCache
	* added feature #7592: Enable tabs for be_users, credits Francois Suter
	* added feature #6846: enable Tabs in tt_content, credits Steffen Kamper
	* fixed bug #7608: Keys for clear-cache labels must be renamed

2008-02-22  Benjamin Mack  <mack@xnos.org>

	* Fixed bug #7445: Malformed translated locallang causes PHP crash (thanks to Francois Suter)

2008-02-22  Ingmar Schlecht  <ingmar@typo3.org>

	* Added feature #7526: Making loginNews look nicer (Thanks to Steffen Kamper)
	* Added feature #4553: Enable negative timestamps, so the date/datetime fields now support dates starting from 1902 instead of 1970. This is possible on all platforms since PHP 5.1. (Thanks to Steffen Kamper)
	* Added feature #7337: stdWrap for menu > range & entrylevel (Thanks to Georg Ringer)
	* Fixed bug #7158: DBAL fixes to Indexed Search backend module (Thanks to Moreno Feltscher)
	* Fixed bug #7625: Little typo in stylesheet (Thanks to Steffen Ritter)
	* Issue #7508: Slight improvement of BE user label in backend.php (Thanks to Steffen Kamper)

2008-02-21  Benjamin Mack  <mack@xnos.org>

	* Added feature "Extended BE Module "Web/Permissions" with AJAX possibilites (Thanks to Andreas Kundoch)

2008-02-21  Ingo Renner  <ingo@typo3.org>

	* !!! modified the interface for toolbarItems so that the reference to the backend Object in the constructor is optional, this was necessary to have AJAX response methods in the same class as the code that generates the toolbar item itself

2008-02-20  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Fixed bug #7602: htmlArea RTE: Make the use of extended inline elements configurable
	* Fixed bug #7604: htmlArea RTE: add compatibility mode for indentation and alignment
	* Fixed bug #7582: RTE transformation should process dd element as block element